# hacs-cwu-controller

./: .gitignore  CLAUDE.md  README.md  hacs.json  lovelace-dashboard.yaml  lovelace-simple.yaml  node-red-cwu-report-flow.json  pyproject.toml  refaktor-cwu.md
.github/workflows/: release.yml
custom_components/cwu_controller/: __init__.py  binary_sensor.py  bsb_lan.py  button.py  config_flow.py  const.py  coordinator.py  energy.py  manifest.json  notifications.py  number.py  select.py  sensor.py  services.yaml  strings.json  switch.py  tariff.py
custom_components/cwu_controller/frontend/: panel.html  panel.js  (+1 more)
docs/: ANALYSIS_2025-12-26.md  CARD_INTEGRATION.md  FRONTEND.md  PLAN_PUMP_RULES_MODE.md  SUMMER_MODE_PLAN.md  TILE_CARD_INTEGRATION.md  WINTER_MODE.md  android_widget_template.md
docs/widgets/: widget_compact.jinja2  widget_full.jinja2  widget_medium.jinja2
mockups/: floor-heating-improved.html  floor-heating-variations.html  pump-realistic-fans.html  pump-variations.html  system-complete.html  tank-pro-showcase.html  tank-v2-spiral.html  tank-v3-helix.html  tank-variations.html  v1-vertical-flow.html  v10-lumina-isometric.html  v11-realistic-pump.html  v12-3d-realistic.html  v13-clean-pro.html  v2-horizontal-schematic.html  v3-isometric-3d.html  v4-circular-radial.html  v5-house-section.html  v6-3d-wireframe-holographic.html  v7-3d-full-system.html  v8-holographic-pro.html  v9-lumina-minimal.html
tests/: __init__.py  conftest.py  test_bsb_lan.py  test_coordinator.py  test_heat_pump_detection.py  test_sensors.py  test_summer_mode.py  test_tariff.py
(+7 files in other folders)
